Complete nginx proxy production implementation with comprehensive fixes
## 🏗️ Architecture Changes

### Nginx Proxy Configuration
- **Fixed redirect loop**: Removed HTTP to HTTPS redirect that caused infinite loops
- **Simplified SSL handling**: Removed SSL configuration since Fly.io handles TLS termination
- **Port configuration**: Changed from port 80 to port 8000 for internal nginx service
- **Upstream ports**: Updated to use port 80 for flycast services (correct internal routing)
- **Security headers**: Moved from server level to location level for better control
- **API routing**: Updated login endpoint to use /api/v1/auth/login path
- **Static caching**: Commented out static file caching for frontend assets

### Docker Configuration
- **Removed SSL components**: Eliminated openssl, SSL directories, and startup scripts
- **Simplified user management**: Use existing nginx user from base image
- **Fixed permissions**: Proper file ownership and 644 permissions for nginx.conf
- **Streamlined build**: Removed unnecessary packages and configuration steps

### Fly.io Configuration
- **App naming**: Changed nginx proxy app from 'divemap-nginx-proxy' to 'divemap'
- **Port alignment**: Internal port 8000 matches nginx configuration
- **HTTPS handling**: Set force_https=false since Fly.io handles TLS termination
- **Removed HTTPS service**: Eliminated duplicate HTTPS configuration block
- **Backend/Frontend updates**: Set force_https=false for internal services

## 🔧 Technical Improvements

### Backend Enhancements
- **Security logging**: Enhanced suspicious IP detection and logging
- **IPv6 support**: Added 'fdaa:' prefix support for Fly.io private IPv6 addresses
- **Code cleanup**: Fixed trailing whitespace and formatting issues

### Frontend Configuration
- **App separation**: Renamed from 'divemap' to 'divemap-frontend' for clarity
- **Build optimization**: Removed hardcoded API URL from build args
- **Port configuration**: Internal port 8080 with force_https=false

#

--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -1,15 +1,12 @@
-# fly.toml app configuration file generated for divemap on 2025-07-27T18:05:39+03:00
+# fly.toml app configuration file generated for divemap-frontend on 2025-08-18T22:29:18+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'divemap'
+app = 'divemap-frontend'
 primary_region = 'fra'
 
 [build]
-  [build.args]
-    REACT_APP_API_URL = "https://divemap-backend.fly.dev"
-    # REACT_APP_GOOGLE_CLIENT_ID will be provided via build secrets
 
 [env]
   NODE_ENV = 'production'
@@ -19,7 +16,7 @@ primary_region = 'fra'
 
 [http_service]
   internal_port = 8080
-  force_https = true
+  force_https = false
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
