--- a/nginx/fly.toml
+++ b/nginx/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'divemap-nginx-proxy'
+app = 'divemap'
 primary_region = 'fra'
 
 [build]
@@ -15,10 +15,10 @@ primary_region = 'fra'
 [processes]
   app = 'nginx -g "daemon off;"'
 
-# HTTP service configuration
+# HTTP service configuration (Fly.io handles HTTPS termination)
 [http_service]
-  internal_port = 80
-  force_https = true
+  internal_port = 8000
+  force_https = false
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 1
@@ -37,34 +37,8 @@ primary_region = 'fra'
     timeout = "5s"
     path = "/health"
 
-# HTTPS service configuration
-[[http_service]]
-  internal_port = 443
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 1
-  processes = ['app']
-
-  # SSL configuration
-  [http_service.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[http_service.checks]]
-    grace_period = "10s"
-    interval = "30s"
-    method = "GET"
-    timeout = "5s"
-    path = "/health"
-
 # VM configuration
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 2
-
-# Secrets that need to be set:
-# fly secrets set SSL_CERT="$(cat /path/to/cert.pem)" -a divemap-nginx-proxy
-# fly secrets set SSL_KEY="$(cat /path/to/key.pem)" -a divemap-nginx-proxy
