--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -22,7 +22,7 @@ primary_region = 'fra'
 
 [http_service]
   internal_port = 8000
-  force_https = true
+  force_https = false
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
