--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -45,45 +45,21 @@ http {
 
     # Upstream definitions for Fly.io internal addresses
     upstream frontend {
-        server divemap-frontend.flycast:8080;
+        server divemap-frontend.flycast:80;
         keepalive 32;
     }
     
     upstream backend {
-        server divemap-backend.flycast:8000;
+        server divemap-backend.flycast:80;
         keepalive 32;
     }
 
-    # HTTP to HTTPS redirect
+    # Main HTTP server (Fly.io handles HTTPS termination)
     server {
-        listen 80;
-        server_name divemap.gr www.divemap.gr;
-        return 301 https://$server_name$request_uri;
-    }
+        listen 8000;
+        server_name localhost;
 
-    # Main HTTPS server
-    server {
-        listen 443 ssl http2;
-        server_name divemap.gr www.divemap.gr;
-
-        # SSL configuration
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-        ssl_prefer_server_ciphers off;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-
-        # Security headers
-        add_header X-Frame-Options "DENY" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'none'; object-src 'none';" always;
-
-        # Client IP handling
+        # Client IP handling from Fly.io proxy
         real_ip_header Fly-Client-IP;
         real_ip_recursive on;
         set_real_ip_from 0.0.0.0/0;
@@ -98,6 +74,13 @@ http {
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
+
+            # Security headers
+            add_header X-Frame-Options "DENY" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'none'; object-src 'none';" always;
             
             # Frontend specific settings
             proxy_buffering off;
@@ -148,7 +131,7 @@ http {
         }
 
         # Login endpoint with stricter rate limiting
-        location /api/auth/login {
+        location /api/v1/auth/login {
             limit_req zone=login burst=5 nodelay;
             
             proxy_pass http://backend;
@@ -169,13 +152,13 @@ http {
         }
 
         # Static file caching for frontend assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            add_header X-Content-Type-Options "nosniff" always;
-        }
+        #location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        #    proxy_pass http://frontend;
+        #    proxy_set_header Host $host;
+        #    expires 1y;
+        #    add_header Cache-Control "public, immutable";
+        #    add_header X-Content-Type-Options "nosniff" always;
+        #}
 
         # Security: Block access to hidden files
         location ~ /\. {
