Implement nginx reverse proxy architecture with refresh token authentication and enhanced newsletter parsing (#16)
* Implement backend infrastructure for refresh token system

- Add database migration for refresh_tokens and auth_audit_logs tables
- Create enhanced TokenService with refresh token management
- Update User model with refresh token relationships
- Update authentication router with new endpoints
- Update schemas to include refresh token fields
- Add environment configuration for refresh tokens
- Create comprehensive test suite covering all refresh token functionality
- Add standalone tests for development without database dependencies
- Test TokenService initialization, configuration, and core methods
- Validate token creation, structure, and expiration
- Test model definitions for RefreshToken and AuthAuditLog
- Verify security features including token rotation and audit logging

This implements the complete backend infrastructure and testing for the refresh token system.

* Implement frontend refresh token system and complete backend integration

- Enhanced AuthContext with refresh token support and background renewal
- Updated API interceptor to handle automatic token renewal
- Created SessionManager component for session expiration warnings
- Integrated SessionManager into main App component
- Fixed formatting and import order issues
- Implemented comprehensive refresh token system with background renewal
- Added extensive debugging for cookie setting and token refresh
- Created nginx proxy implementation plan for solving cross-origin issues
- Updated documentation and environment configurations
- Fixed database migration conflicts and model defaults
- Added comprehensive test suite for refresh token functionality

This completes the frontend implementation and backend integration for the refresh token system.

* Implement comprehensive refresh token system with nginx reverse proxy

This commit implements a complete refresh token authentication syste

--- a/env.example
+++ b/env.example
@@ -3,45 +3,46 @@
 
 # Database Configuration
 MYSQL_ROOT_PASSWORD=your_secure_root_password_here
+MYSQL_DATABASE=divemap
 MYSQL_USER=divemap_user
 MYSQL_PASSWORD=your_secure_database_password_here
 
-# Redis Configuration
-REDIS_PASSWORD=your_secure_redis_password_here
-
-# RabbitMQ Configuration
-RABBITMQ_USER=divemap
-RABBITMQ_PASSWORD=your_secure_rabbitmq_password_here
-
-# JWT Configuration
+# Backend Configuration
 # Generate a secure secret: openssl rand -hex 32
 SECRET_KEY=your_very_long_random_secret_key_here_minimum_32_characters
 
-# Environment Configuration
+# Token Configuration
+ACCESS_TOKEN_EXPIRE_MINUTES=15          # Short-lived for security
+REFRESH_TOKEN_EXPIRE_DAYS=30           # Longer-lived for convenience
+REFRESH_TOKEN_COOKIE_SECURE=false      # Set to true in production (HTTPS)
+REFRESH_TOKEN_COOKIE_HTTPONLY=true     # Prevent XSS attacks
+REFRESH_TOKEN_COOKIE_SAMESITE=strict   # Maximum security since we're behind nginx
+ENABLE_TOKEN_ROTATION=true             # Issue new refresh token with each refresh
+ENABLE_AUDIT_LOGGING=true              # Log authentication events
+MAX_ACTIVE_SESSIONS_PER_USER=5         # Limit concurrent sessions
+
+# JWT Configuration
+ALGORITHM=HS256                        # JWT signing algorithm
+
+# Development Environment
 ENVIRONMENT=development
 NODE_ENV=development
+CORS_ORIGINS=http://localhost
+ALLOWED_ORIGINS=http://localhost
 
-# API Configuration
-REACT_APP_API_URL=http://localhost:8000
-
-# Security Configuration
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-ALGORITHM=HS256
-
+# External Services
+OPENAI_API_KEY=your_openai_api_key_here
 # Google OAuth Configuration
 # Get these from Google Cloud Console: https://console.cloud.google.com/
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+#GOOGLE_CLIENT_ID=your_google_client_id_here
+#GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
-# Production Settings (uncomment for production)
-# ENVIRONMENT=production
-# NODE_ENV=production
-# REACT_APP_API_URL=https://your-domain.com
-
-# CORS Configuration
-# Comma-separated list of allowed origins for CORS
-# Example: ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# Production Environment
+ENVIRONMENT=production
+CORS_ORIGINS=https://divemap.gr,https://divemap.fly.dev
+ALLOWED_ORIGINS=https://divemap.gr,https://divemap.fly.dev
+REFRESH_TOKEN_COOKIE_SECURE=true       # HTTPS required in production
+REFRESH_TOKEN_COOKIE_SAMESITE=strict   # Maximum security in production
 
 # Security Notes:
 # 1. Generate strong passwords using: openssl rand -base64 32
@@ -49,5 +50,3 @@ ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 # 3. Never commit .env file to version control
 # 4. Use different passwords for each service
 # 5. Rotate secrets regularly in production 
-
-OPENAI_API_KEY=your_openai_api_key_goes_here
