Increase all rate limits by 1.5x and add configurable proxy chain security
This commit implements two major improvements:

1. Rate Limit Increases (1.5x multiplier):
   - Authentication: Registration 5→8/min, Login 20→30/min, Google OAuth 20→30/min
   - Dive Sites: Search 100→150/min, Details 200→300/min, Creation 10→15/min
   - Content: Updates 20→30/min, Comments 5→8/min, Media 20→30/min
   - Nginx: API zone 10→15r/s, Login zone 5→8r/m

2. Configurable Proxy Chain Security:
   - Add SUSPICIOUS_PROXY_CHAIN_LENGTH environment variable
   - Production: Set to 6 for Cloudflare + Fly.io + nginx + frontend + backend
   - Development: Set to 3 for stricter monitoring
   - Prevents false positive security alerts in production environments

All rate limiting tests updated and verified to work with new limits.
Documentation updated across security, API, deployment, and environment files.

Files affected: 11 backend/router files, nginx configs, tests, docs, env.example

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -12,6 +12,7 @@ primary_region = 'fra'
   ACCESS_TOKEN_EXPIRE_MINUTES = '30'
   ALGORITHM = 'HS256'
   PYTHONPATH = '/app'
+  SUSPICIOUS_PROXY_CHAIN_LENGTH = '6'
 
 [processes]
   app = '/app/startup.sh'
