--- a/env.example
+++ b/env.example
@@ -29,6 +29,7 @@ ENVIRONMENT=development
 NODE_ENV=development
 CORS_ORIGINS=http://localhost
 ALLOWED_ORIGINS=http://localhost
+SUSPICIOUS_PROXY_CHAIN_LENGTH=3       # Development: Stricter monitoring for local development
 
 # External Services
 OPENAI_API_KEY=your_openai_api_key_here
@@ -38,11 +39,13 @@ OPENAI_API_KEY=your_openai_api_key_here
 #GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
 # Production Environment
-ENVIRONMENT=production
-CORS_ORIGINS=https://divemap.gr,https://divemap.fly.dev
-ALLOWED_ORIGINS=https://divemap.gr,https://divemap.fly.dev
-REFRESH_TOKEN_COOKIE_SECURE=true       # HTTPS required in production
-REFRESH_TOKEN_COOKIE_SAMESITE=strict   # Maximum security in production
+#ENVIRONMENT=production
+#CORS_ORIGINS=https://divemap.gr,https://divemap.fly.dev
+#ALLOWED_ORIGINS=https://divemap.gr,https://divemap.fly.dev
+#REFRESH_TOKEN_COOKIE_SECURE=true       # HTTPS required in production
+#REFRESH_TOKEN_COOKIE_SAMESITE=strict   # Maximum security in production
+#SUSPICIOUS_PROXY_CHAIN_LENGTH=6       # Production: Cloudflare + Fly.io + nginx + frontend + backend = ~6 hops
+
 
 # Security Notes:
 # 1. Generate strong passwords using: openssl rand -base64 32
