Add comprehensive Cloudflare Turnstile integration for bot protection
This commit implements a complete Cloudflare Turnstile integration system
for enhanced security on login and registration pages.

## Backend Changes
- Add TurnstileService for token verification with Cloudflare API
- Implement TurnstileMonitor for tracking verification metrics and analytics
- Add database migration (0030) for Turnstile user fields
- Extend auth endpoints with Turnstile validation
- Add system endpoint for Turnstile statistics (/api/v1/admin/system/turnstile-stats)
- Update schemas to include Turnstile fields
- Add comprehensive test coverage for Turnstile integration

## Frontend Changes
- Create Turnstile.js component for Cloudflare widget integration
- Add turnstileConfig.js utility for environment-based configuration
- Update Login.js and Register.js with Turnstile integration
- Extend AdminSystemOverview.js to display Turnstile statistics
- Add API client function for fetching Turnstile metrics
- Implement conditional loading based on environment variables

## Infrastructure & Configuration
- Update docker-compose.yml for Turnstile environment variables
- Modify frontend Dockerfile and deploy.sh for Turnstile support
- Add environment variable examples in env.example files
- Update documentation with comprehensive integration guide

## Security Features
- Conditional Turnstile enabling based on environment configuration
- Rate limiting integration with existing security measures
- Comprehensive error handling and user feedback
- Monitoring and analytics for security insights

## Testing & Quality
- Unit tests for TurnstileService with mocking
- Integration tests for auth endpoints with Turnstile
- Test coverage for both enabled and disabled states
- Validation of security measures and error handling

The integration is production-ready and includes comprehensive monitoring,
error handling, and user experience considerations.

--- a/env.example
+++ b/env.example
@@ -38,6 +38,12 @@ OPENAI_API_KEY=your_openai_api_key_here
 #GOOGLE_CLIENT_ID=your_google_client_id_here
 #GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
+# Cloudflare Turnstile Configuration
+# Get these from Cloudflare Dashboard: https://dash.cloudflare.com/?to=/:account/turnstile
+TURNSTILE_SECRET_KEY=your_turnstile_secret_key_here
+TURNSTILE_SITE_KEY=your_turnstile_site_key_here
+TURNSTILE_VERIFY_URL=https://challenges.cloudflare.com/turnstile/v0/siteverify
+
 # Production Environment
 #ENVIRONMENT=production
 #CORS_ORIGINS=https://divemap.gr,https://divemap.fly.dev
