--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,8 +21,10 @@ COPY . .
 # Build the app with environment variables (using production build that skips ESLint)
 ARG REACT_APP_API_URL
 ARG REACT_APP_GOOGLE_CLIENT_ID
+ARG REACT_APP_TURNSTILE_SITE_KEY
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_GOOGLE_CLIENT_ID=$REACT_APP_GOOGLE_CLIENT_ID
+ENV REACT_APP_TURNSTILE_SITE_KEY=$REACT_APP_TURNSTILE_SITE_KEY
 ENV GENERATE_SOURCEMAP=false
 RUN GENERATE_SOURCEMAP=false npm run build:prod
 
