--- a/frontend/env.example
+++ b/frontend/env.example
@@ -8,6 +8,10 @@ REACT_APP_API_URL=http://localhost/
 # Get these from Google Cloud Console: https://console.cloud.google.com/
 REACT_APP_GOOGLE_CLIENT_ID=your_google_client_id_here
 
+# Cloudflare Turnstile Configuration
+# Get these from Cloudflare Dashboard: https://dash.cloudflare.com/?to=/:account/turnstile
+REACT_APP_TURNSTILE_SITE_KEY=your_turnstile_site_key_here
+
 # Development Settings
 REACT_APP_ENVIRONMENT=development
 
