--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     env_file:
       - "./frontend/.env"
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:8000}
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost}
       - NODE_ENV=${NODE_ENV:-development}
     depends_on:
       - backend
