Complete nginx proxy implementation
Implement comprehensive nginx reverse proxy for development and production
environments. This resolves cross-origin cookie issues with refresh tokens
and provides unified origin for frontend and backend services.

Key changes:
- Update docker-compose.yml to remove frontend port exposure (debug only)
- Enhance nginx/dev.conf with gzip compression and security features
- Fix health endpoint routing to properly proxy to backend
- Update nginx/prod.conf with proper health endpoint routing

The proxy now correctly routes:
- / -> frontend container
- /api/* -> backend container
- /health -> backend health endpoint
- /docs, /openapi.json -> backend documentation

All authentication flows work without CORS issues, and the system is
ready for production deployment with comprehensive security headers
and rate limiting.

Fixes #51 - Complete Nginx Proxy Implementation

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -176,10 +176,16 @@ http {
         }
 
         # Health check endpoint
-        location /health {
+        location /nginx-health {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+
+        # Health check endpoint
+        location /health {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
         }
 
         # Static file caching for frontend assets
