--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,8 +52,7 @@ services:
       dockerfile: Dockerfile.dev
     container_name: divemap_frontend
     restart: always
-    ports:
-      - 3000:3000
+    ports: []
     volumes:
       - ./frontend:/app
       - /app/node_modules
