--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -16,6 +16,22 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
     upstream frontend {
         server divemap_frontend:3000;
     }
@@ -23,7 +39,8 @@ http {
     upstream backend {
         server divemap_backend:8000;
     }
-    
+ 
+    # Main HTTP server
     server {
         listen 80;
         server_name localhost;
@@ -63,6 +80,33 @@ http {
         location /openapi.json {
             proxy_pass http://backend;
             proxy_set_header Host $host;
+        }
+
+        # Health check endpoint
+        location /nginx-health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
+        # Health check endpoint
+        location /health {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+        }
+
+        # Security: Block access to hidden files
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+
+        # Security: Block access to backup files
+        location ~ ~$ {
+            deny all;
+            access_log off;
+            log_not_found off;
         }
     }
 }
