Enhance dive and dive-sites pages with multiple UX improvements
This commit implements several key user experience enhancements:

**Quick Filter Functionality:**
- Fix quick filters in dives page desktop view that were previously non-functional
- Implement proper handleQuickFilter logic with toggle functionality
- Add support for wreck, reef, boat dive, shore dive, and my dives filters
- Ensure proper tag ID mapping and filter state management

**Clickable Tags:**
- Make tags clickable in both dives and dive-sites list/grid views
- Add hover effects and tooltips for better user interaction
- Implement tag click handlers that add quick filters in format 'Tags: <tag name>'
- Support multiple tag selection and proper filter management

**Private Dive Indicators:**
- Add visual distinction for private dives in dives page
- Implement lock icon and 'Private' badge for private dive entries
- Use subtle purple background (bg-purple-50) for private dive cards
- Ensure consistent styling across list and grid views

**Tag Click Error Fix:**
- Resolve JavaScript error when clicking tags in filter section
- Fix handleSearchChange function expecting event object vs direct parameters
- Add proper handleFilterChange function for tag filter interactions

**Technical Improvements:**
- Update nginx configuration for better deployment handling
- Improve code maintainability and user interaction patterns
- Ensure consistent filter behavior across different page views

All changes maintain backward compatibility and follow existing code patterns.

--- a/nginx/fly.toml
+++ b/nginx/fly.toml
@@ -34,8 +34,8 @@ primary_region = 'fra'
     grace_period = "10s"
     interval = "30s"
     method = "GET"
-    timeout = "5s"
-    path = "/health"
+    timeout = "10s"
+    path = "/nginx-health"
 
 # VM configuration
 [[vm]]
