--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.539.0",
     "ol": "^10.6.1",
     "playwright": "^1.54.2",
@@ -13,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
