--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -77,6 +77,11 @@ http {
             proxy_set_header Host $host;
         }
         
+        location /redoc {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+        }
+        
         location /openapi.json {
             proxy_pass http://backend;
             proxy_set_header Host $host;
