--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -152,6 +152,15 @@ http {
             proxy_set_header Fly-Client-IP $http_fly_client_ip;
         }
         
+        location /redoc {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Fly-Client-IP $http_fly_client_ip;
+        }
+        
         location /openapi.json {
             proxy_pass http://backend;
             proxy_set_header Host $host;
