compose dev DB/init.sql not create db

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,15 +1,11 @@
 FROM mysql:lts
 
-ENV MYSQL_ROOT_PASSWORD=changeme
-ENV MYSQL_DATABASE=appdb
-ENV MYSQL_USER=appuser
-ENV MYSQL_PASSWORD=secret
-
-#COPY docker-entrypoint.sh /entrypoint.sh
-#RUN chmod +x /entrypoint.sh
-
-COPY ./init.sql /docker-entrypoint-initdb.d/init.sql
+# Copy the init script to the proper location
+# MySQL automatically creates database and user from environment variables
+# This script only needs to create tables and insert sample data
+COPY ./init.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 3306
-# Define default command
+
+# Use the default MySQL entrypoint which handles environment variables automatically
 CMD ["mysqld"]
