Add comprehensive dive profile visualization system
Implement interactive dive profile charts with depth vs time visualization,
temperature profiles, NDL/CNS indicators, and gas change markers. Add
Cloudflare R2 storage integration with local filesystem fallback and
admin monitoring dashboard.

## Core Features
- Interactive dive profile charts with Recharts integration
- Depth vs time visualization with calculated average depth line
- Temperature profile with stepped, dotted line visualization
- NDL zones and CNS oxygen toxicity indicators
- Gas change event markers with O2 content display
- Decompression status visualization with 'In deco' indicators
- Mobile touch support with pan and zoom functionality
- Chart export capabilities (PNG and PDF) using html2canvas/jsPDF
- Smart sampling for performance optimization (1000+ samples)
- High contrast mode and accessibility features

## Backend Implementation
- Database schema updates with dive profile metadata columns
- R2StorageService with S3-compatible API and automatic fallback
- DiveProfileParser for Subsurface XML format with comprehensive extraction
- API endpoints for profile CRUD operations and health monitoring
- Integration with existing dive import workflow
- User-specific storage paths for organized data management
- Comprehensive test suite with 18+ test cases

## Frontend Implementation
- AdvancedDiveProfileChart React component with mobile optimization
- Tabbed navigation in dive detail pages with URL parameter support
- Real-time data fetching with React Query integration
- Touch event handlers for mobile chart interactions
- Export functionality with client-side chart rendering
- Responsive design adapting to all screen sizes
- Professional loading states and error handling

## Admin Dashboard Enhancement
- R2 storage health monitoring in system overview
- Real-time status indicators for configuration and connectivity
- Clear visual feedback for storage mode (R2 Cloud vs Local Only)
- Proper loading s

--- a/env.example
+++ b/env.example
@@ -44,6 +44,14 @@ TURNSTILE_SECRET_KEY=your_turnstile_secret_key_here
 TURNSTILE_SITE_KEY=your_turnstile_site_key_here
 TURNSTILE_VERIFY_URL=https://challenges.cloudflare.com/turnstile/v0/siteverify
 
+# Cloudflare R2 Storage Configuration (Optional)
+# If any of these are missing, local filesystem storage will be used
+# Get these from Cloudflare Dashboard: https://dash.cloudflare.com/?to=/:account/r2
+#R2_ACCOUNT_ID=your_r2_account_id_here
+#R2_ACCESS_KEY_ID=your_r2_access_key_id_here
+#R2_SECRET_ACCESS_KEY=your_r2_secret_access_key_here
+#R2_BUCKET_NAME=your_r2_bucket_name_here
+
 # Production Environment
 #ENVIRONMENT=production
 #CORS_ORIGINS=https://divemap.gr,https://divemap.fly.dev
