--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "fuse.js": "^7.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.539.0",
@@ -20,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^3.2.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
