Fix anyio compatibility issues in test suite
Pin anyio version to 3.6.2 to prevent breaking changes in CI.
Update pytest configuration for better async handling.
Improve TestClient configuration for anyio stream lifecycle.

- Pin anyio==3.6.2 in requirements.txt (was anyio>=3.6.2,<4)
- Add --asyncio-mode=auto to pytest.ini for better async support
- Update conftest.py TestClient with raise_server_exceptions=False
- Fix anyio.WouldBlock and anyio.EndOfStream errors in auth tests

Resolves GitHub Actions test failures caused by anyio 3.7.1 breaking changes.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,7 @@ google-auth==2.40.3
 google-auth-oauthlib==1.2.2
 # Updated dependencies for security
 starlette==0.47.2
-anyio>=3.6.2,<4
+anyio==3.6.2
 pyasn1==0.6.1
 # Additional security packages
 cryptography==45.0.5
