--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -11,6 +11,7 @@ addopts =
     --cov=app
     --cov-report=term-missing
     --cov-report=html
+    --asyncio-mode=auto
 markers =
     auth: Authentication tests
     users: User management tests
