Add GitHub Actions test environment replication
- Add docker-test-github-actions.sh script to replicate GitHub Actions test environment locally
- Fix bcrypt version compatibility by adding bcrypt==4.3.0 to requirements.txt
- Fix test foreign key constraint errors by creating proper test users instead of hardcoded IDs
- Update .dockerignore to exclude __pycache__ and other build artifacts
- Add GOOGLE_CLIENT_ID dummy variable to prevent OAuth test failures
- Fix test_auth.py, test_diving_centers.py, and test_dive_sites.py authorization tests

This enables local debugging of GitHub Actions test failures by running tests
in the exact same environment as CI/CD pipeline.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.20
 # JWT library - migrated from python-jose to PyJWT for security
 PyJWT[crypto]==2.10.1
 passlib[bcrypt]==1.7.4
+bcrypt==4.3.0
 python-dotenv==1.0.0
 redis==5.0.1
 celery==5.3.4
