Refactor dives.py router into 13 focused modules for improved maintainability (#96)
* Phase 0: Complete pre-refactoring analysis

- Analyzed all 63 functions in dives.py with line counts
- Mapped all imports, shared constants, and dependencies
- Identified shared utilities and common code patterns
- Established performance baselines for comparison
- Documented current API contracts and endpoints
- Analyzed database session and auth patterns
- Mapped error handling and logging patterns
- Documented configuration dependencies

Phase: ANALYSIS | Status: Complete

* Phase 1: Complete dependency mapping and risk assessment

- Mapped all external dependencies and imports
- Identified potential circular imports and resolution strategy
- Planned shared code extraction and common utilities
- Designed module communication patterns
- Assessed risks and created mitigation strategies
- Planned rollback strategy and contingency plans
- Identified files that import from dives.py
- Mapped test dependencies and test data requirements

Phase: DEPENDENCY_MAPPING | Status: Complete

* Phase 2: Create module structure for dives router

- Created backend/app/routers/dives/ directory structure
- Created __init__.py with proper exports and router registration
- Created dives_crud.py with 7 core CRUD operations
- Created dives_admin.py with 4 admin operations
- Created dives_media.py with 5 media and tag operations
- Created dives_search.py with fuzzy search functionality
- Created dives_import.py with complete Subsurface XML import system
- Created dives_profiles.py with 4 dive profile management functions
- Created dives_utils.py with utility functions and health check
- Created supporting modules: dives_shared.py, dives_db_utils.py, dives_validation.py, dives_errors.py, dives_logging.py

Phase: MODULE_STRUCTURE | Status: Complete

* Phase 3: Extract shared code utilities

- Extracted shared imports and constants to dives_shared.py
- Extracted common database utilities to dives_db_utils.p

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.20
 # JWT library - migrated from python-jose to PyJWT for security
 PyJWT[crypto]==2.10.1
 passlib[bcrypt]==1.7.4
+bcrypt==4.3.0
 python-dotenv==1.0.0
 redis==5.0.1
 celery==5.3.4
@@ -23,7 +24,7 @@ google-auth==2.40.3
 google-auth-oauthlib==1.2.2
 # Updated dependencies for security
 starlette==0.47.2
-anyio>=3.6.2,<4
+anyio==3.6.2
 pyasn1==0.6.1
 # Additional security packages
 cryptography==45.0.5
