--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -88,6 +88,8 @@ jobs:
         echo "DATABASE_URL=mysql+pymysql://root:password@localhost:3306/divemap_test" >> $GITHUB_ENV
         echo "SECRET_KEY=test-secret-key-for-ci" >> $GITHUB_ENV
         echo "ENVIRONMENT=${{ github.event.inputs.environment || 'ci' }}" >> $GITHUB_ENV
+        echo "GOOGLE_CLIENT_ID=dummy-client-id-for-testing" >> $GITHUB_ENV
+        echo "GITHUB_ACTIONS=true" >> $GITHUB_ENV
 
     - name: Set up MySQL database
       if: ${{ github.event.inputs.run_migrations != 'false' || github.event_name != 'workflow_dispatch' }}
@@ -113,7 +115,7 @@ jobs:
       run: |
         cd backend
         source divemap_venv/bin/activate
-        python -m pytest tests/ -v --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml
+        python -m pytest tests/ -v --cov=app --cov-report=term-missing --cov-report=html --cov-report=xml -x --maxfail=1 --tb=short
 
     - name: Upload coverage reports
       if: ${{ (github.event.inputs.run_coverage != 'false' || github.event_name != 'workflow_dispatch') && always() }}
