Add nginx cold-start loading page and utilities
Implement nginx fallback for Fly.io cold starts by serving a static
loading page when the frontend upstream isn’t ready, with fast
timeouts that trigger the fallback quickly. Scope the fallback to the
root route so API endpoints continue returning real status codes.
Add a playful rotating message set for better UX. The loading page
polls the backend /health every 500ms with a 1s fetch timeout to
avoid hangs and reloads instantly when the stack is ready. Remove
meta refresh to prevent bouncing into Cloudflare’s 502 window. Copy
the loading page into the nginx image.

Also add a utility script to stop Fly Machines across db/backend/
frontend/nginx by reading app names from their fly.toml files.

Changes:
- nginx/prod.conf: scope error_page to '/', enable fail-fast
  timeouts; keep APIs returning real error codes
- nginx/loading.html: spinner, humorous quips, /health polling,
  debug logs, AbortController timeout, no meta refresh
- nginx/Dockerfile.prod: COPY loading page into /usr/share/nginx/html
- utils/stop_fly_machines.sh: stop machines via flyctl for all apps

Note: Cloudflare 502 can occur before nginx is up; consider keeping
one nginx machine warm or handling 502 at Cloudflare edge during
cold-start.

--- a/nginx/Dockerfile.prod
+++ b/nginx/Dockerfile.prod
@@ -9,6 +9,9 @@ RUN apk add --no-cache \
 # Copy production configuration
 COPY prod.conf /etc/nginx/nginx.conf
 
+# Copy static loading page used during auto-start warmup
+COPY loading.html /usr/share/nginx/html/loading.html
+
 # Set proper permissions (nginx user already exists in base image)
 RUN chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
