--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -73,6 +73,12 @@ http {
 
         # Frontend routes
         location / {
+            # Intercept upstream errors here only (keep APIs returning real status codes)
+            proxy_intercept_errors on;
+            # Serve a loading page with HTTP 200 when upstream isn't ready yet
+            # Typical boot-time upstream errors from Fly auto-start: 502/503/504
+            error_page 502 503 504 =200 /loading.html;
+
             proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -92,8 +98,16 @@ http {
             # Frontend specific settings
             proxy_buffering off;
             proxy_cache off;
-            proxy_read_timeout 300s;
-            proxy_connect_timeout 75s;
+            # Fail fast while upstream containers boot so we can show loading page
+            proxy_connect_timeout 250ms;
+            proxy_read_timeout 2s;
+            proxy_send_timeout 2s;
+        }
+
+        # Static loading page served directly by nginx while upstreams are starting
+        location = /loading.html {
+            root /usr/share/nginx/html;
+            add_header Cache-Control "no-store";
         }
 
         # Backend API routes with rate limiting
