--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -29,6 +29,18 @@ primary_region = 'fra'
   min_machines_running = 0
   processes = ['app']
 
+  [http_service.concurrency]
+    type = "requests"
+    soft_limit = 50
+    hard_limit = 150
+
+  [[http_service.checks]]
+    grace_period = "20s"
+    interval = "30s"
+    method = "GET"
+    timeout = "5s"
+    path = "/health"
+
 [[vm]]
   memory = '4gb'
   cpu_kind = 'shared'
