Add content-hashed assets optimization plan and implementation
- Create comprehensive plan for content-hashed static assets
- Document frontend build process with precompression
- Define Nginx configuration for direct static file serving
- Specify Cloudflare cache rules for edge optimization
- Include phased implementation strategy and usage instructions

Implementation files added:
- frontend/package.json: Added build:with-compression script
- frontend/scripts/precompress-assets.sh: Gzip precompression script
- nginx/Dockerfile.prod: Updated to copy frontend build assets
- nginx/prod.conf: Added static file serving with cache headers
- scripts/build-with-static-assets.sh: Automated build process
- scripts/warmup-cache.sh: Cloudflare cache warming script
- backend/Dockerfile.test: Test Dockerfile for CI/CD
- .gitignore: Added nginx/frontend-build/ to ignore generated assets

This plan addresses production cold start optimization by:
- Serving static assets directly from Nginx (bypassing backend)
- Using content-hashed filenames for immutable caching
- Leveraging Cloudflare edge caching for faster delivery
- Implementing gzip precompression for better performance

Expected impact: Significant reduction in cold start time for
static asset requests and improved overall page load performance.

--- a/nginx/Dockerfile.prod
+++ b/nginx/Dockerfile.prod
@@ -12,6 +12,13 @@ COPY prod.conf /etc/nginx/nginx.conf
 # Copy static loading page used during auto-start warmup
 COPY loading.html /usr/share/nginx/html/loading.html
 
+# Copy frontend build (content-hashed assets with precompression)
+# This will be populated during CI/CD build process
+COPY frontend-build/ /usr/share/nginx/html/
+
+# Ensure proper ownership of frontend assets
+RUN chown -R nginx:nginx /usr/share/nginx/html/
+
 # Set proper permissions (nginx user already exists in base image)
 RUN chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
