--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -42,6 +42,9 @@ http {
         application/xml+rss
         application/atom+xml
         image/svg+xml;
+    
+    # Enable serving precompressed files
+    gzip_static on;
 
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=15r/s;
@@ -71,43 +74,34 @@ http {
         # Header size limits for client requests
         large_client_header_buffers 8 16k;
 
-        # Frontend routes
+        # Static assets (content-hashed) - serve directly from Nginx
+        location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            add_header X-Content-Type-Options "nosniff" always;
+            access_log off;
+        }
+
+        # HTML files (short-lived cache)
+        location = /index.html {
+            root /usr/share/nginx/html;
+            add_header Cache-Control "public, max-age=60, stale-while-revalidate=300";
+            add_header X-Content-Type-Options "nosniff" always;
+        }
+
+        # SPA routing - serve index.html for all other routes
         location / {
-            # Intercept upstream errors here only (keep APIs returning real status codes)
-            proxy_intercept_errors on;
-            # Serve a loading page with HTTP 200 when upstream isn't ready yet
-            # Typical boot-time upstream errors from Fly auto-start: 502/503/504
-            error_page 502 503 504 =200 /loading.html;
-
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Fly-Client-IP $http_fly_client_ip;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+            add_header Cache-Control "public, max-age=60, stale-while-revalidate=300";
+            
             # Security headers
             add_header X-Frame-Options "DENY" always;
             add_header X-Content-Type-Options "nosniff" always;
             add_header X-XSS-Protection "1; mode=block" always;
             add_header Referrer-Policy "strict-origin-when-cross-origin" always;
             add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://www.gstatic.com https://static.cloudflareinsights.com https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline' https://accounts.google.com; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https:; frame-src 'self' https://accounts.google.com https://challenges.cloudflare.com; object-src 'none';" always;
-            
-            # Frontend specific settings
-            proxy_buffering off;
-            proxy_cache off;
-            # Fail fast while upstream containers boot so we can show loading page
-            proxy_connect_timeout 250ms;
-            proxy_read_timeout 2s;
-            proxy_send_timeout 2s;
-        }
-
-        # Static loading page served directly by nginx while upstreams are starting
-        location = /loading.html {
-            root /usr/share/nginx/html;
-            add_header Cache-Control "no-store";
         }
 
         # Backend API routes with rate limiting
@@ -211,14 +205,6 @@ http {
             proxy_set_header Host $host;
         }
 
-        # Static file caching for frontend assets
-        #location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        #    proxy_pass http://frontend;
-        #    proxy_set_header Host $host;
-        #    expires 1y;
-        #    add_header Cache-Control "public, immutable";
-        #    add_header X-Content-Type-Options "nosniff" always;
-        #}
 
         # Security: Block access to hidden files
         location ~ /\. {
