Optimize database cold start performance with hybrid connection strategy and service checks (#104)
* Implement database cold start optimizations

- Optimize database readiness check with fixed interval retry strategy
- Improve database connection pooling settings for better performance
- Add database connection warming on FastAPI startup
- Update migration and startup scripts for faster cold start detection

Changes:
- backend/app/database.py: Enhanced connection pool settings and added warm_database_connections()
- backend/app/main.py: Integrated database warming into startup event
- backend/run_migrations.py: Fixed interval retry (0.2s) instead of exponential backoff
- backend/startup.sh: Fixed interval retry (0.2s) for faster database detection
- docs/development/cold-start-optimization-plan.md: Comprehensive optimization plan

Expected impact: -2.9 seconds (19% improvement) in cold start time
Sections implemented: 2.1 (Database Readiness Check), 2.2 (Database Connection Pooling)

* Add content-hashed assets optimization plan and implementation

- Create comprehensive plan for content-hashed static assets
- Document frontend build process with precompression
- Define Nginx configuration for direct static file serving
- Specify Cloudflare cache rules for edge optimization
- Include phased implementation strategy and usage instructions

Implementation files added:
- frontend/package.json: Added build:with-compression script
- frontend/scripts/precompress-assets.sh: Gzip precompression script
- nginx/Dockerfile.prod: Updated to copy frontend build assets
- nginx/prod.conf: Added static file serving with cache headers
- scripts/build-with-static-assets.sh: Automated build process
- scripts/warmup-cache.sh: Cloudflare cache warming script
- backend/Dockerfile.test: Test Dockerfile for CI/CD
- .gitignore: Added nginx/frontend-build/ to ignore generated assets

This plan addresses production cold start optimization by:
- Serving static assets directly from Nginx (bypass

--- a/nginx/Dockerfile.prod
+++ b/nginx/Dockerfile.prod
@@ -4,13 +4,26 @@ FROM nginx:alpine
 # Install required packages
 RUN apk add --no-cache \
     curl \
+    netcat-openbsd \
     && rm -rf /var/cache/apk/*
 
 # Copy production configuration
 COPY prod.conf /etc/nginx/nginx.conf
 
+# Copy startup script
+COPY startup.sh /usr/local/bin/startup.sh
+RUN chmod +x /usr/local/bin/startup.sh && \
+    chown nginx:nginx /usr/local/bin/startup.sh
+
 # Copy static loading page used during auto-start warmup
 COPY loading.html /usr/share/nginx/html/loading.html
+
+# Copy frontend build (content-hashed assets with precompression)
+# This will be populated during CI/CD build process
+COPY frontend-build/ /usr/share/nginx/html/
+
+# Ensure proper ownership of frontend assets
+RUN chown -R nginx:nginx /usr/share/nginx/html/
 
 # Set proper permissions (nginx user already exists in base image)
 RUN chown -R nginx:nginx /var/cache/nginx && \
@@ -33,8 +46,18 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 # Expose port (only HTTP needed)
 EXPOSE 80
 
-# Switch to non-root user
-USER nginx
+# Create a wrapper script that runs pre-warming as root, then starts nginx as nginx user
+RUN echo '#!/bin/sh' > /usr/local/bin/startup-wrapper.sh && \
+    echo 'echo "🚀 Starting Nginx with pre-warming..."' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'echo "📡 Pre-warming database at ${DB_HOST:-divemap-db.flycast}:${DB_PORT:-3306}..."' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'echo "📡 Pre-warming backend at ${BACKEND_HOST:-divemap-backend.flycast}:${BACKEND_PORT:-80}..."' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'timeout 1s nc -6 -w 1 "${DB_HOST:-divemap-db.flycast}" "${DB_PORT:-3306}" < /dev/null > /dev/null 2>&1 &' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'echo "✅ Database ping sent (non-blocking)"' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'timeout 1s curl -s -f "http://${BACKEND_HOST:-divemap-backend.flycast}:${BACKEND_PORT:-80}/" > /dev/null 2>&1 &' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'echo "✅ Backend ping sent (non-blocking)"' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'echo "🎯 Pre-warming complete! Starting Nginx..."' >> /usr/local/bin/startup-wrapper.sh && \
+    echo 'exec nginx -g "daemon off;"' >> /usr/local/bin/startup-wrapper.sh && \
+    chmod +x /usr/local/bin/startup-wrapper.sh
 
-# Start nginx directly (no startup script needed)
-CMD ["nginx", "-g", "daemon off;"]
+# Start nginx with pre-warming
+CMD ["/usr/local/bin/startup-wrapper.sh"]
